--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 <!-- -------- Call To Action -------- -->
 
 <section class="cta" id="cta">
-  <h1> Enroll For Our Various Online Courses<br> Anywhere From The World</h1>
+  <h1> Enroll For Our Courses<br> Anywhere From The World</h1>
   <a href="contact.html" class="hero-btn">Contact Us</a>
 </section>
 
@@ -305,6 +305,7 @@
     quia. Quo neque error repudiandae fuga? Ipsa laudantium molestias eos 
     sapiente officiis modi at sunt excepturi expedita sint? Sed quibusdam
     recusandae alias error harum maxime adipisci amet laborum. </p>
+
   <div class="icons">
     <i class="fa-brands fa-facebook"></i>
     <i class="fa-brands fa-twitter"></i>
