quartar final commit

--- a/index.html
+++ b/index.html
@@ -27,11 +27,18 @@
           <ul>
             <li><a href="#footer">HOME</a></li>
             <li><a href="about.html">ABOUT</a></li>
-            <li><a href="#">PEOPLE</a></li>
+            <li><a href="faculties.html">PEOPLE</a></li>
             <li><a href="#academics">ACADEMICS</a></li>
             <li><a href="#research">RESEARCH</a></li>
-            <li><a href="#">COMMUNITY</a></li>
-            <li><a href="">NEWS & EVENTS</a></li>
+            <li><a href="">COMMUNITY</a>
+                <ul>
+                  <li><a href="https://bup.edu.bd/clubs/bup-infotech-club">BUP InfoTech Club</a></li>
+                  <li><a href="https://bup.edu.bd/clubs/bup-robotics-club">BUP Robotics Club</a></li>
+                  <li><a href="https://bup.edu.bd/clubs/bup-ieee-student-branch">BUP IEEE Student Branch</a></li>
+                  <li><a href=" ">Alumni</a></li>
+                </ul>
+              </li>
+            <li><a href="newseve.html">NEWS & EVENTS</a></li>
             <li><a href="#cta">CONTACT</a></li>
           </ul>
           </div>
@@ -39,25 +46,21 @@
       </nav>
 
       <div class="text-box">
-        <h1><pre>          Department of </pre>
+        <h1><pre>       Department of </pre>
           Information and Communication Technology</h1>
-        <p>Making website is now one of the easiest thing in the world.
-          You just need to learn HTML,CSS,<br>JavaScript and you are good to go.
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,<br>
+          molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
         </p>
         <a href="" class="hero-btn">Visit Us to Know more</a>
       </div>
     </section>
 
-<!-- People -->
-
-<section class="people" id="people">
-
-</section>
 
 <!-- Academics -->
 
 <section class="academics" id="academics">
-  <h1>Courses We Offer</h1>
+  <h1>Our Programs</h1>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
     molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
     numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
@@ -72,51 +75,72 @@
 
   <div class="row">
     <div class="academics-col">
-      <h3>Undergraduate</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-        molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
-        numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
-        optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis
-        obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
-        nihil, eveniet aliquid culpa officia aut! Impedit sit sunt quaerat, odit,
-        tenetur error, harum nesciunt ipsum debitis quas aliquid. Reprehenderit,
-        quia. Quo neque error repudiandae fuga? Ipsa laudantium molestias eos 
-        sapiente officiis modi at sunt excepturi expedita sint? Sed quibusdam
-        recusandae alias error harum maxime adipisci amet laborum. </p>
+      <div class="card">
+        <div class="inner-box">
+          <div class="card-front"
+               <h3><b>Undergraduate</b></h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
+                molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
+                numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
+                optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis
+                obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
+                nihil, eveniet aliquid culpa officia aut! Impedit sit sunt quaerat, odit
+               </p>
+          </div>
+          <div class="card-back">
+            <p>Bachelor's in Information and Communication Engineering (BICE)</p>
+          </div>
+        </div>
+      </div>
     </div>
 
     <div class="academics-col">
-      <h3>Graduate</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-        molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
-        numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
-        optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis
-        obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
-        nihil, eveniet aliquid culpa officia aut! Impedit sit sunt quaerat, odit,
-        tenetur error, harum nesciunt ipsum debitis quas aliquid. Reprehenderit,
-        quia. Quo neque error repudiandae fuga? Ipsa laudantium molestias eos 
-        sapiente officiis modi at sunt excepturi expedita sint? Sed quibusdam
-        recusandae alias error harum maxime adipisci amet laborum. </p>
+      <div class="card">
+        <div class="inner-box">
+          <div class="card-front"
+               <h3><b>Graduate</b></h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
+                molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
+                numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
+                optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis
+                obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
+                nihil, eveniet aliquid culpa officia aut! Impedit sit sunt quaerat, odit
+                </p>
+          </div>
+          <div class="card-back">
+            <p>Masters in Information and Communication Engineering (MICE)</p>
+            <p>Masters in Information and Communication Technology (MICT)</p>
+            <p>Masters in Information Security System (MISS)</p>
+          </div>
+        </div>
+      </div>
     </div>
 
     <div class="academics-col">
-      <h3>Post Graduation</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-        molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
-        numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
-        optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis
-        obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
-        nihil, eveniet aliquid culpa officia aut! Impedit sit sunt quaerat, odit,
-        tenetur error, harum nesciunt ipsum debitis quas aliquid. Reprehenderit,
-        quia. Quo neque error repudiandae fuga? Ipsa laudantium molestias eos 
-        sapiente officiis modi at sunt excepturi expedita sint? Sed quibusdam
-        recusandae alias error harum maxime adipisci amet laborum. </p>
+      <div class="card">
+        <div class="inner-box">
+          <div class="card-front"
+               <h3><b>Post Graduate</b></h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
+                molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
+                numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
+                optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis
+                obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
+                nihil, eveniet aliquid culpa officia aut! Impedit sit sunt quaerat, odit
+                </p>
+          </div>
+          <div class="card-back">
+            <p>No Programs Available Yet</p>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
 </section>
 
 <!-- -------- Facilities -------- -->
+
 <section class="facilities">
   <h1> Our Facilities</h1>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
@@ -132,8 +156,8 @@
 
   <div class="row">
     <div class="facilities-col">
-      <img src="images/library.png" >
-          <h3>World Class Library</h3>
+      <img src="images/eclab.webp" height="250px">
+          <h3>Electrical Circuit Lab</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
             molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
             numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
@@ -147,8 +171,8 @@
     </div>
 
     <div class="facilities-col">
-      <img src="images/basketball.png" >
-          <h3>Largest Play Ground</h3>
+      <img src="images/clab.png" height="250px">
+          <h3>Computer Lab</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
             molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
             numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
@@ -162,8 +186,8 @@
     </div>
 
     <div class="facilities-col">
-      <img src="images/cafeteria.png" >
-          <h3>Tasty and Healthy</h3>
+      <img src="images/comlab.png" height="250px">
+          <h3>Communication Lab</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
             molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
             numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
@@ -179,6 +203,7 @@
 </section>
 
 <!-- -------- Research -------- -->
+
 <section class="research" id="research">
   <h1> Our Research Areas</h1>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
@@ -194,19 +219,19 @@
 
   <div class="row">
     <div class="research-col">
-      <img src="images/ai&ml.png" width="502px" height="550px">
+      <img src="images/ai&ml.png" width="502px" height="450px">
       <div class="layer">
           <h3>Artificial Intelligence & Machine Learning</h3>
       </div>
     </div>
     <div class="research-col">
-      <img src="images/communication.png" width="502px" height="550px">
+      <img src="images/communication.png" width="502px" height="450px">
       <div class="layer">
           <h3>Communication</h3>
       </div>
     </div>
     <div class="research-col">
-      <img src="images/cyber.png" width="502px" height="550px">
+      <img src="images/cyber.png" width="502px" height="450px">
       <div class="layer">
           <h3>Cyber Security</h3>
       </div>
@@ -214,11 +239,6 @@
   </div>
 </section>
 
-<!-- Community -->
-
-<section class="community" id="community">
-
-</section>
 
 <!-- News & Events -->
 
@@ -227,6 +247,7 @@
 </section>
 
   <!-- -------- Testimonials -------- -->
+
 <section class="testimonials" id="blog">
   <h1> What Our Students Say</h1>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
@@ -242,39 +263,31 @@
 
   <div class="row">
     <div class="testimonial-col">
-      <img src="images/user1.jpg" alt="user1" >
-      <div></div>
+      <img src=" " alt="user1" >
+      <div>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
         molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
         numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
         optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis
         obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
-        nihil, eveniet aliquid culpa officia aut! Impedit sit sunt quaerat, odit,
-        tenetur error, harum nesciunt ipsum debitis quas aliquid. Reprehenderit,
-        quia. Quo neque error repudiandae fuga? Ipsa laudantium molestias eos 
-        sapiente officiis modi at sunt excepturi expedita sint? Sed quibusdam
         recusandae alias error harum maxime adipisci amet laborum. </p>
-      <h3>Marielene Monor</h3>
+      <h3>N Suzana</h3>
       <i class="fa fa-star"></i>
-<i class="fa fa-star"></i>
-<i class="fa fa-star"></i>
-<i class="fa fa-star"></i>
-<i class="fa fa-star-half-o"></i>
+      <i class="fa fa-star"></i>
+      <i class="fa fa-star"></i>
+      <i class="fa fa-star"></i>
+      <i class="fa fa-star-half-o"></i>
     </div>
+  </div>
     <div class="testimonial-col">
-      <img src="images/user2.jpg" alt="user1" >
-      <div></div>
+      <img src=" " alt="user2" >
+      <div>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
         molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
         numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
-        optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis
-        obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
-        nihil, eveniet aliquid culpa officia aut! Impedit sit sunt quaerat, odit,
-        tenetur error, harum nesciunt ipsum debitis quas aliquid. Reprehenderit,
-        quia. Quo neque error repudiandae fuga? Ipsa laudantium molestias eos 
-        sapiente officiis modi at sunt excepturi expedita sint? Sed quibusdam
-        recusandae alias error harum maxime adipisci amet laborum. </p>
-      <h3>Danial Stone</h3>
+        recusandae alias error harum maxime adipisci amet laborum.
+       </p>
+      <h3>Anika</h3>
       <i class="fa fa-star"></i>
       <i class="fa fa-star"></i>
       <i class="fa fa-star"></i>
@@ -282,12 +295,31 @@
       <i class="fa fa-star-o"></i>
     </div>
   </div>
+  <div class="testimonial-col">
+    <img src=" " alt="user3" >
+    <div>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
+      molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
+      numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
+      optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis
+      obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
+      nihil, eveniet aliquid culpa officia aut! Impedit sit sunt quaerat, odit,
+      tenetur error, harum nesciunt ipsum debitis quas aliquid.
+     </p>
+    <h3>Sadia</h3>
+    <i class="fa fa-star"></i>
+    <i class="fa fa-star"></i>
+    <i class="fa fa-star"></i>
+    <i class="fa fa-star"></i>
+    <i class="fa fa-star-o"></i>
+    </div>
+  </div>
 </section>
 
 <!-- -------- Call To Action -------- -->
 
 <section class="cta" id="cta">
-  <h1> Enroll For Our Courses<br> Anywhere From The World</h1>
+  <h1> Enroll For Our Programs<br> Anywhere From The World</h1>
   <a href="contact.html" class="hero-btn">Contact Us</a>
 </section>
 
@@ -326,11 +358,5 @@
   }
 </script>
 
-
-
-
-
-
   </body>
 </html>
-
