quartar final commit

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <ul>
             <li><a href="#footer">HOME</a></li>
             <li><a href="about.html">ABOUT</a></li>
-            <li><a href="faculties.html">PEOPLE</a></li>
+            <li><a href="people.html">PEOPLE</a></li>
             <li><a href="#academics">ACADEMICS</a></li>
             <li><a href="#research">RESEARCH</a></li>
             <li><a href="">COMMUNITY</a>
@@ -357,6 +357,6 @@
     navLinks.style.right="-200px";
   }
 </script>
-
+  
   </body>
 </html>
