--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
       </nav>
 
       <div class="text-box">
-        <h1><pre>       Department of </pre>
+        <h1><pre>     Department of </pre>
           Information and Communication Technology</h1>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,<br>
-          molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
+          The official website for the students & alumni of Department of Information & Communication Technology, BUP<br>
+          From foundational hardware and software systems to new mechine learning models and computational methods to address critical problems. Our work is bringing changes in the society.
         </p>
         <a href="" class="hero-btn">Visit Us to Know more</a>
       </div>
